--- a/extensions/mpv/config.html
+++ b/extensions/mpv/config.html
@@ -1,5 +1,13 @@
 <div class="form-group">
 	<label for="list">Extractors:</label>
-	<input type="text" class="form-control" name="list" placeholder="Downloads,Recordings" />
+	<input
+		type="text"
+		class="form-control"
+		name="list"
+		id="list"
+		placeholder="Downloads,Recordings"
+	/>
 	<small class="text-muted form-text">Comma sepparated array.</small>
+	<label for="presence">Discord presence:</label>
+	<input type="text" name="presence" id="presence" />
 </div>
